CHANGE: jobDependencies: Bug fixed fuer Alignment, weitere Design-Anpassungen fuer Job-Info Text, canvasConfig als Parameter uerbergeben

--- a/jobDependencies/styles.css
+++ b/jobDependencies/styles.css
@@ -58,11 +58,14 @@ input {
   box-sizing: border-box; 
 }
 
-select {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  width: 10%;
-  box-sizing: border-box; 
-  margin-right: 15px;
+input[type="radio"] {
+  width: auto; 
+  margin-right: 5px;
+  margin-left: 10px; 
+  accent-color: blueviolet;
 }
+
+label {
+  color:white;
+}
+
